@@ -1,0 +1,33 @@
+{
+  "encrypt": {
+    "capabilities": {
+      "accessibility": true,
+      "extract": true,
+      "moddifyannotations": true,
+      "modify": true,
+      "modifyassembly": true,
+      "modifyforms": true,
+      "modifyother": true,
+      "printhigh": true,
+      "printlow": true
+    },
+    "encrypted": true,
+    "ownerpasswordmatched": true,
+    "parameters": {
+      "P": -4,
+      "R": 4,
+      "V": 4,
+      "bits": 128,
+      "filemethod": "AESv2",
+      "key": null,
+      "method": "AESv2",
+      "streammethod": "AESv2",
+      "stringmethod": "AESv2"
+    },
+    "userpasswordmatched": true
+  },
+  "parameters": {
+    "decodelevel": "generalized"
+  },
+  "version": 1
+}
